# otus4

./: .gitignore  CMakeLists.txt  main.cpp
debpack/_CPack_Packages/Linux/DEB/: printip.0.0.1--Linux.deb
debpack/_CPack_Packages/Linux/DEB/printip.0.0.1--Linux/: control
