cmake_minimum_required(VERSION 3.5)
set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
set(PROJECT_VESRION 0.0.${PATCH_VERSION})
project (printip)

add_executable(
    printip
    main.cpp
)
set_target_properties(printip PROPERTIES CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)

set(CPACK_GENERATOR DEB)
SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME}.${PROJECT_VESRION})
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT example@example.com)
set(CPACK_DEBIAN_PACKAGE_VERSION ${PROJECT_VESRION})
set(CPACK_PACKAGE_DIRECTORY ../debpack)
include(CPack)